TestSuite/errors/err0224.pas
label 1;
begin
  goto 1;
  while true do
  begin
    var x := 1;
    1: x := 2;
    break;
  end;
end.